[package]
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["asynchronous", "network-programming", "command-line-utilities"]
description = "DoH and Oblivious DoH library for the rust-doh app"
edition = "2018"
homepage = "https://github.com/jedisct1/rust-doh"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
name = "libdoh"
repository = "https://github.com/jedisct1/rust-doh"
version = "0.9.10"

[features]
default = ["tls"]
tls = ["tokio-rustls"]

[dependencies]
anyhow = "1.0.75"
arc-swap = "1.6.0"
base64 = "0.21.3"
byteorder = "1.4.3"
bytes = "1.4.0"
futures = "0.3.28"
hyper = {version = "0.14.27", default-features = false, features = ["server", "http1", "http2", "stream"]}
odoh-rs = "1.0.2"
rand = "0.8.5"

rustdns = "0.4.0"
rustls-pemfile = "1.0.3"
tokio = {version = "1.32.0", features = ["net", "rt-multi-thread", "time", "sync"]}
tokio-rustls = {version = "0.24.1", features = ["early-data"], optional = true}

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
